Fix issue text on dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,7 @@ html {
   background-color: white;
 }
 
+.main-bg-dark {
+  color: white;
+}
+
